--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,29 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Dependencies
+#markdown:         kramdown
+#highlighter:      rouge
+gems:
+    - jekyll-paginate
+    - jekyll-gist
 
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# Permalinks
+permalink:        pretty
+#relative_permalinks: true
 
-# Build settings
-markdown: kramdown
+# Setup
+title:            Alex Gude
+tagline:          'Scientist'
+description:      'Data scientist'
+url:              http://alexgude.com
+baseurl:          /
+
+author:
+name:           'Alexander Gude'
+url:             http://alexgude.com
+
+paginate:         5
+
+# Custom vars
+version:          2.1.0
+
+github:
+repo:           https://github.com/poole/hyde
