Move incline CSS with SASS and use compression
All CSS files are now `@import`ed in main.css and SASS is run to minify
them.

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,8 @@ author:           'Alexander Gude'
 # Blog
 paginate:         5
 paginate_path:    "/blog/page:num/"
+
+# SASS
+sass:
+    sass_dir: _sass
+    style:    compressed
