Update article plots to SVG
The following changes were made:

- Images updated to SVG
- White space around the plots was reduced
- New data (from re-checking) as used for the initial article plots

Additionally the PNG images were also updated to avoid breaking any
external links, and for the Twitter/OpenGraph cards which do not support
SVG.

Finally, the .gitignore was updated to ignore the Jupyter
.ipynb_checkpoints/ folder.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ _site
 .sass-cache
 .jekyll-metadata
 
+# Jupyter
+.ipynb_checkpoints
+.ipynb_checkpoints/*
+
 # Github ignore lists from: https://github.com/github/gitignore
 # Available under the MIT license (https://github.com/github/gitignore)
 
