Move posts to "/blog/:slug/"
Move posts to a slightly friendlier url, and use `jekyll-redirect-from`
to redirect the old URLs.

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,7 @@ gems:
     - jekyll-sitemap
     - jekyll-seo-tag
     - jekyll-feed
-
-# Permalinks
-permalink:        pretty
+    - jekyll-redirect-from
 
 # Setup
 author:
@@ -30,6 +28,7 @@ name:             "AlexGude.com"
 # Blog
 paginate:         5
 paginate_path:    "/blog/page:num/"
+permalink: /blog/:slug/
 
 # Social for jekyll-seo-tag
 twitter:
