Exclude files not needed for the website
Using the 'exclude:' variable in _config.yml to remove files that are
not needed for the live site, only for the repository.

--- a/_config.yml
+++ b/_config.yml
@@ -59,3 +59,8 @@ compress_html:
     blanklines: false
     profile: false
     startings: []
+
+# Excluded files from site
+exclude:
+    - LICENSE.md
+    - CNAME
