Change the site description field

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
 
 title: "Alex Gude"
 tagline: "Data Scientist"
-description: "The home page and blog of Alexander Gude"
+description: "A blog about technology, data science, machine learning, and more!"
 logo: /files/headshot.jpg
 
 # URL
