Add in colored sidebar with _config.yaml setting
The current blue is the medium blue from the Tango project palette:
`#3465a4`

Other possible colors considered were:

  - '#6a9fb5' # Hyde blue
  - '#1f77b4' # Seaborn blue
  - '#407496' # A nice blue
  - '#3b7499' # Another nice blue

--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,10 @@ google_analytics: UA-88777885-1
 # Disable jekyll-optional-front-matter plugin
 require_front_matter: true
 
+# Theme configuration
+theme_config:
+    sidebar_color: '#3465a4'
+
 # SASS
 sass:
     sass_dir: _sass
