Change `_config` to point to HTTPS

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "A blog about technology, data science, machine learning, and more!
 logo: /files/headshot.jpg
 
 # URL
-url: http://alexgude.com
+url: https://alexgude.com
 baseurl: ""
 name: "AlexGude.com"
 
