Change links in posts to use HTTPS where possible

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ sass:
     sass_dir: _sass
     style: compressed
 
-# Compress HTML http://jch.penibelst.de/
+# Compress HTML https://jch.penibelst.de/
 compress_html:
     clippings: []
     comments: []
