Fix missing image on Twitter Cards
For pages which do not specify an image, we now set a default image so
that Jekyll-seo-tag will set an `og:image` and `twitter:image` tag.

Also set the default card type to "summary" for non-posts in the root
folder (mainly, the index, papers, and blog list pages). This prevents a
REALLY LARGE PICTURE OF MY HEAD from showing up on Twitter posts linking
to those pages.

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,17 @@ social:
         - https://github.com/agude
         - https://linkedin.com/in/AlexanderGude
 
+defaults:
+  # Add a default image and Twitter card for non-post layouts for jekyll-seo-tag
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      image: /files/headshot-small.jpg
+      twitter:
+        card: "summary"
+
 # Google site verification via Jekyll-seo-tag
 google_site_verification: NnoUcVom5yrsNeAcRLx7yQvWortvmqEP-yazzCmGSMA
 
