Add mastodon instance variable

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author:
     last: "Gude"
     twitter: "alex_gude"
     mastodon: "alex_gude"
+    mastodon_instance: "fediscience.org"
     github: "agude"
     linkedin: "alexandergude"
 
