Refactor: Use committed Gemfile.lock in Docker build
Aligns Docker image gem installation with runtime expectations by
using the committed Gemfile.lock during the build process.
Introduces `make lock` for containerized lockfile updates.

- Stop ignoring Gemfile.lock in .dockerignore
- Update Dockerfile to copy Gemfile.lock and use deployment config
- Update Makefile targets to depend on Gemfile.lock
- Add `make lock` target using base Ruby image
- Update Bundler version used in build/lock to 2.6.7
- Add vendor/ to .gitignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,10 +9,10 @@
 _site
 
 # Ignore Bundler vendor directory (if installing locally)
-vendor/bundle
+# vendor/bundle
 
-# IMPORTANT: Ignore the lock file from the host context
-Gemfile.lock
+# IMPORTANT: Gemfile.lock is NO LONGER ignored so it's used in the build
+# Gemfile.lock
 
 # Ignore Bundler config and cache
 .bundle
@@ -28,8 +28,3 @@ README.md
 LICENSE.md
 redirects.json
 node_modules
-
-# Ignore temporary build directory if used previously
-/tmp/jekyll-docker-agude*
-
-# Add any other files/directories not needed in the final image
