Implement configurable plugin logging
Overhauled the logging mechanism for custom Liquid tag failures, managed
within `_plugins/liquid_utils.rb`.

Key changes:
- Logging behavior is now determined by environment and configuration.
- Default Behavior:
    - Non-Production (`environment != 'production'`): Logs failures to
      both the build Console and as HTML comments in the output file.
    - Production (`environment == 'production'`): Logs failures ONLY
      to the build Console. HTML comments are always disabled.
- Configuration (`_config.yml`):
    - Added a `plugin_logging:` section.
    - Specific tag types (e.g., `BOOK_LINK`, `AUTHOR_LINK`) can have
      logging disabled entirely by setting their key to `false`.
    - Logging defaults to enabled (`true`) for any tag type not
      explicitly set to `false`.
- Implementation:
    - Updated `LiquidUtils.log_failure` to read `site.config['environment']`
      and the `plugin_logging` settings.
    - Uses `Jekyll.logger.warn` for console output when available, falling
      back to `puts` with a `[PLUGIN LOG]` prefix.
- Added example configuration section to `_config.yml` documenting
  the available tag types for logging control.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,24 @@
 # This fixes an error when serving from inside Docker
 host: 0.0.0.0
 
+# Plugin Logging Configuration
+# Controls logging behavior for custom plugin failures.
+# Set specific tag types to 'false' to disable ALL logging (Console & HTML)
+# for failures originating from that tag type.
+# Defaults to 'true' (enabled) if a tag type is not listed here.
+#
+# Environment Behavior:
+#   - Non-Production: Logs to Console AND HTML Comments (if enabled below).
+#   - Production: Logs ONLY to Console (if enabled below). HTML comments are always disabled.
+#
+plugin_logging:
+    ARTICLE_CARD_LOOKUP: true
+    AUTHOR_LINK: true
+    BOOK_CARD_LOOKUP: true
+    BOOK_BACKLINKS: true
+    RENDER_BOOK_LINK: true
+    SERIES_LINK: true
+
 # Dependencies
 plugins:
     - jekyll-feed
