Add log_failure Liquid tag for configurable logging
Introduced a new Liquid tag `{% log_failure %}` implemented in
`_plugins/log_failure_tag.rb`.

This tag provides a frontend to the centralized
`LiquidUtils.log_failure` method, allowing non-fatal warnings and errors
to be logged directly from Liquid templates.

Key features:
- Uses named arguments (e.g., `type="TYPE" reason="Reason" key=val`).
- Respects logging configuration defined in `_config.yml` under
  `plugin_logging` (per-tag enable/disable).
- Adheres to environment defaults (Console+HTML for non-prod,
  Console-only for prod).
- Does not break the build (unlike `{% link ... %}`).

Updated an example usage site (related to unit processing) to replace a
manual HTML comment log block with the new `{% log_failure %}` tag,
demonstrating its application.

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ plugin_logging:
     BOOK_BACKLINKS: true
     RENDER_BOOK_LINK: true
     SERIES_LINK: true
+    UNITS_WARNING: true
 
 # Dependencies
 plugins:
