--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ host: 0.0.0.0
 plugin_logging:
     ARTICLE_CARD_LOOKUP: true
     AUTHOR_LINK: true
+    BACKLINK_UTIL: true
     BOOK_BACKLINKS: true
     BOOK_CARD_LOOKUP: true
     RELATED_BOOKS: true
