Feat: Add BookListUtils for preparing grouped book data
Introduces a new utility module, `BookListUtils`, to centralize the
logic for fetching, filtering, sorting, and grouping books. This utility
will serve as the backend for new Liquid tags that display lists of
books (e.g., by series, by author, or all books grouped).

Key functionalities in `BookListUtils`:
- `get_data_for_series_display`: Returns books for a specified series,
  sorted by `book_number`.
- `get_data_for_author_display`: Returns books by a specified author,
  categorized into standalone (sorted alphabetically ignoring articles)
  and series (grouped by series name, with books sorted by `book_number`).
- `get_data_for_all_books_display`: Returns all published books, structured
  similarly to the author display but without author filtering.
- `render_book_groups_html`: A helper to generate the HTML for displaying
  standalone books and series groups, utilizing existing
  `LiquidUtils.render_book_card` and `SeriesLinkUtils.render_series_link`.

The utility uses the existing `LiquidUtils.log_failure` for reporting
recoverable issues, such as a requested series not being found.

This commit also includes:
- Comprehensive Minitest unit tests for `BookListUtils` covering
  data retrieval, sorting logic, and edge cases.
- Updates to `_tests/test_helper.rb` to require the new utility and
  add default test logging configuration for related operations.
- An update to `_config.yml` to enable logging for
  `BOOK_LIST_SERIES_DISPLAY` during development.

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ plugin_logging:
     BACKLINK_UTIL: true
     BOOK_BACKLINKS: true
     BOOK_CARD_LOOKUP: true
+    BOOK_LIST_SERIES_DISPLAY: true
     RELATED_BOOKS: true
     RELATED_POSTS: true
     RENDER_AUTHOR_LINK: true
