Change logging level for Object links

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ host: 0.0.0.0
 # Global minimum log level for plugin messages appearing on the console.
 # Options: "debug", "info", "warn", "error"
 # If a message's own level is lower than this, it won't show on console.
-plugin_log_level: "info"
+plugin_log_level: info
 
 plugin_logging:
 # Individual Plugin/Tag Type Switches (true = on, false = off)
