Update logging levels and prerequisite checks
- Updates log levels in RenderArticleCardTag to :error for missing
  objects or utility failures.
- Simplifies prerequisite checks in BookBacklinksTag and BacklinkUtils
  to focus on actual data usage (page['url'], page['title']) and sets
  log level to :error for missing prerequisites.
- Adds new logging tag_types to _config.yml and test_helper.rb defaults.

--- a/_config.yml
+++ b/_config.yml
@@ -12,18 +12,26 @@ plugin_logging:
 # If 'false', no logging (console or HTML) will occur for this tag_type,
 # regardless of plugin_log_level or message-specific level.
 plugin_logging:
+    ARTICLE_CARD_ALT_MISSING: true
     ARTICLE_CARD_LOOKUP: true
     ARTICLE_CARD_UTIL: true
     AUTHOR_LINK: true
     AUTHOR_LINK_UTIL_ERROR: true
     BACKLINK_UTIL: true
     BOOK_BACKLINKS: true
+    BOOK_BACKLINKS_TAG: true
+    BOOK_CARD_GENERIC_ALT: true
     BOOK_CARD_LOOKUP: true
+    BOOK_CARD_MISSING_EXCERPT: true
+    BOOK_CARD_MISSING_IMAGE_PATH: true
+    BOOK_CARD_MISSING_TITLE: true
     BOOK_CARD_RATING_ERROR: true
+    BOOK_CARD_USER_ALT_MISSING: true
     BOOK_CARD_UTIL: true
     BOOK_LINK_UTIL_ERROR: true
     BOOK_LIST_AUTHOR_DISPLAY: true
     BOOK_LIST_SERIES_DISPLAY: true
+    BOOK_LIST_UTIL: true
     CARD_DATA_EXTRACTION: true
     DISPLAY_RANKED_BOOKS: true
     RELATED_BOOKS: true
