Convert units include to Liquid tag plugin
Replaces the `_includes/units.html` file with a new Ruby-based
Liquid tag plugin `_plugins/units_tag.rb`.

This change offers:
- Centralized unit definitions in Ruby for easier maintenance.
- Robust argument parsing for `number` and `unit` parameters.
- Syntax error handling for missing or invalid arguments.
- Runtime error logging via PluginLoggerUtils for issues like
  missing resolved values or unknown unit keys.

Updates:
- `_config.yml` and `_tests/test_helper.rb` with new logging
  tag types (`UNITS_TAG_ERROR`, `UNITS_TAG_WARNING`).
- `test.md` and a blog post to use the new `{% units %}` tag syntax.
- Adds new test file `_tests/plugins/test_units_tag.rb` with
  comprehensive coverage for the new tag.

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,8 @@ plugin_logging:
     RENDER_SERIES_LINK: true
     SERIES_LINK: true
     SERIES_LINK_UTIL_ERROR: true
-    UNITS_WARNING: true
+    UNITS_TAG_ERROR: true
+    UNITS_TAG_WARNING: true
 
 # Dependencies
 plugins:
