Add single item ELO ranker

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Generated files
 book_ranking_tool.html
 book_ranking_tool_mergesort.html
+elo_calculator_tool.html
 visual_book_ranker.html
 
 # Jekyll
