--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@
 # If a message's own level is lower than this, it won't show on console.
 plugin_log_level: info
 
-plugin_logging:
 # Individual Plugin/Tag Type Switches (true = on, false = off)
 # If 'false', no logging (console or HTML) will occur for this tag_type,
 # regardless of plugin_log_level or message-specific level.
@@ -18,6 +17,7 @@ plugin_logging:
     BACKLINK_UTIL: true
     BOOK_BACKLINKS_TAG: true
     BOOK_CARD_LOOKUP: true
+    BOOK_CARD_MISSING_AUTHORS: true
     BOOK_CARD_MISSING_EXCERPT: true
     BOOK_CARD_MISSING_IMAGE_PATH: true
     BOOK_CARD_MISSING_TITLE: true
@@ -33,12 +33,14 @@ plugin_logging:
     FRONT_PAGE_FEED: true
     POST_LIST_UTIL_CATEGORY: true
     RELATED_BOOKS: true
+    RELATED_BOOKS_SERIES: true
     RELATED_POSTS: true
     RENDER_ARTICLE_CARD_TAG: true
     RENDER_AUTHOR_LINK: true
     RENDER_BOOK_CARD_TAG: true
     RENDER_BOOK_LINK: true
     RENDER_SERIES_LINK: true
+    RENDER_SHORT_STORY_LINK: true
     UNITS_TAG_ERROR: true
     UNITS_TAG_WARNING: true
 
