Implement comprehensive CI/CD pipeline
To improve site quality and prevent broken deployments, this commit
introduces a robust CI/CD pipeline with automated testing, linting, and
site validation.

The key changes include:

1.  **Dependency Updates:**
    - `html-proofer` is added to the Gemfile to check for broken links
      and invalid HTML in the built site.
    - `rubocop` is added for Ruby code linting to enforce style and
      catch common errors.

2.  **Local Development Enhancements (Makefile):**
    - A new `lint` target runs RuboCop against the Ruby source files.
    - A new `check` target builds the site and runs `html-proofer` to
      validate the output locally.

3.  **GitHub Actions Workflow Overhaul:**
    - The workflow is now a multi-stage pipeline (`test` -> `build` ->
      `deploy`).
    - The `test` job runs RuboCop and the full Minitest suite on every
      push. A failure in this job stops the entire workflow.
    - The `build` job, which now depends on the success of `test`, runs
      `html-proofer` after the Jekyll build. A failure here also stops
      the workflow.
    - The `deploy` job only runs if all previous checks pass, ensuring
      that only a fully validated site is ever deployed.

This creates a strong safety net, ensuring that code quality, plugin
functionality, and site integrity are automatically verified before any
changes go live.

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,10 +1,12 @@
+# .github/workflows/jekyll.yml
+#
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll site to Pages
+name: Test and Deploy Jekyll site to Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -27,9 +29,29 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # Test job
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+          cache-version: 0
+
+      - name: Run linter
+        run: bundle exec rubocop
+
+      - name: Run tests
+        run: bundle exec ruby -I _plugins -I _tests -e "require 'test_helper'; Dir.glob('_tests/**/test_*.rb').each { |f| load f }"
+
   # Build job
   build:
     runs-on: ubuntu-latest
+    needs: test # This job only runs if the 'test' job succeeds
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,6 +72,13 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+
+      - name: Check for broken links
+        run: |
+          bundle exec htmlproofer ./_site \
+            --disable-external \
+            --ignore-urls "/livereload.js/" \
+            --check-html
 
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
