Fix Docker gem installation path and prevent unnecessary rebuilds
Previously, gems were installed locally in `vendor/bundle` inside the
container. When mounting the working directory via `make`, this path was
shadowed, causing "missing gems" errors unless installed manually.
Switched Bundler config to global (`frozen`) to install gems in the
system path, ensuring visibility across volume mounts.

Also removed `COPY . .` from the Dockerfile. Since code is mounted at
runtime, copying source files into the image caused the build cache to
invalidate on every minor file change (tests, posts), resulting in
storage bloat from dangling layers.

Updated .dockerignore to strictly exclude `vendor`.

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,8 +8,8 @@
 # Ignore Jekyll build output
 _site
 
-# Ignore Bundler vendor directory (if installing locally)
-# vendor/bundle
+# Ignore Bundler vendor directory (to keep build context small)
+vendor
 
 # IMPORTANT: Gemfile.lock is NO LONGER ignored so it's used in the build
 # Gemfile.lock
