Add script to write Rubocop Prompts for LLMs

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ book_ranking_tool_mergesort.html
 elo_calculator_tool.html
 visual_book_ranker.html
 
+# LLM stuff
+_prompts
+
 # Jekyll
 _site
 .sass-cache
