Add semantic HTML comparison tool for build verification
Introduced `tools/html_diff.py` to enable semantic comparison of Jekyll
build directories. This script normalizes HTML output by stripping build
timestamps and sorting attributes, allowing for accurate diffs between
pre- and post-change builds without noise from non-deterministic
elements.

Changes:
- Created `tools/html_diff.py` to walk directories and compare HTML
  content semantically.
- Added `lxml` to `pyproject.toml` dependencies to support the new tool.

--- a/_scripts/pyproject.toml
+++ b/_scripts/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.8"
 dependencies = [
     "pyyaml", # Used by make_pages.py and the ranker generators for reading .md front matter.
     "beautifulsoup4", # Used by compare_backlinks.py for parsing HTML.
+    "lxml", # Required by BeautifulSoup for fast HTML parsing
 ]
 
 [tool.uv]
