Migrate HTMLProofer to v5 and Ruby script
Refactored the build validation process to use `html-proofer` v5.x via a
dedicated Ruby script, replacing the deprecated CLI usage.

Changes:
- Upgraded `html-proofer` to `~> 5.0` in `Gemfile`.
- Created `_bin/check_links.rb` to handle validation configuration
  (checking Links, Images, and Scripts).
- Updated `Makefile` to invoke the new script via `bundle exec ruby`.
- Updated `.github/workflows/jekyll.yml` to use the new script in CI.

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -74,11 +74,7 @@ jobs:
           JEKYLL_ENV: production
 
       - name: Check for broken links
-        run: |
-          bundle exec htmlproofer ./_site \
-            --disable-external \
-            --ignore-urls "/livereload.js/" \
-            --check-html
+        run: bundle exec ruby _bin/check_links.rb
 
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
